--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,7 @@
     <link rel="icon" href="https://img.icons8.com/ios-filled/50/000000/uc-browser.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@900&family=Roboto&display=swap" rel="stylesheet">
     <title>Haven</title>
   </head>
   <body>
